force-app/main/default/objects/SPEN_Project_Cost_Payment__c/SPEN_Project_Cost_Payment__c.object-meta.xml
<CustomObject>
    <label>Project Cost &amp; Payment</label>
    <nameField>
        <displayFormat>PCP-{00000}</displayFormat>
        <label>Project Cost &amp; Payment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Costs &amp; Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>