force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_AccessRights__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AccessRights__c</fullName>
    <label>Access Rights</label>
    <length>255</length>
    <type>Text</type>
</CustomField>