force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_Apparatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Apparatus__c</fullName>
    <formula>SPEN_LandInterest__r.SPEN_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apparatus</label>
    <type>Text</type>
</CustomField>