force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_FutureYearsCost__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FutureYearsCost__c</fullName>
    <label>Future Years Cost</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>