force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_InterimEstimate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InterimEstimate__c</fullName>
    <label>Interim Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>