force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_Job__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Job__c</fullName>
    <label>Job</label>
    <referenceTo>SPEN_Job__c</referenceTo>
    <relationshipLabel>Project Costs &amp; Payments</relationshipLabel>
    <relationshipName>SPEN_ProjectCostsPayments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>