force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_LandInterest__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandInterest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Land Right</label>
    <referenceTo>SPEN_Land_Interest__c</referenceTo>
    <relationshipLabel>Project Costs &amp; Payments</relationshipLabel>
    <relationshipName>Project_Costs_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>