force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_LandInterestType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandInterestType__c</fullName>
    <formula>TEXT(SPEN_LandInterest__r.SPEN_Land_Interest_Type__c)</formula>
    <label>Land Right Type</label>
    <type>Text</type>
</CustomField>