force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_LandOwner__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Land Owner</label>
    <referenceTo>SPEN_PartnerAssociation__c</referenceTo>
    <relationshipLabel>Project Costs &amp; Payments</relationshipLabel>
    <relationshipName>Project_Costs_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>