force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_LandownerLegalPaid__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandownerLegalPaid__c</fullName>
    <label>Landowner Legal Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>