force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_Location__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Location__c</fullName>
    <formula>SPEN_LandInterest__r.SPEN_Land__r.SPEN_Address__c</formula>
    <label>Location</label>
    <type>Text</type>
</CustomField>