force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>