force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_ResourceEstimate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ResourceEstimate__c</fullName>
    <label>Resource Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>