force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_ResourcePaid__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ResourcePaid__c</fullName>
    <label>Resource Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>