force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_ServitudeValuePaid__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ServitudeValuePaid__c</fullName>
    <label>Servitude Value Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>