force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_SigningIncentivePaid__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SigningIncentivePaid__c</fullName>
    <label>Signing Incentive Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>