force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_Stage1Estimate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Stage1Estimate__c</fullName>
    <label>Stage 1: Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>