force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_TitleSearchCosts__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TitleSearchCosts__c</fullName>
    <label>Title Search Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>