force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_TotalEstimated__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TotalEstimated__c</fullName>
    <formula>SPEN_Stage1Estimate__c + SPEN_Stage2Estimate__c + SPEN_InterimEstimate__c + SPEN_LandownerLegalEstimate__c + SPEN_PostConstructionEstimate__c + SPEN_ServitudeValueEstimate__c + SPEN_SigningIncentiveEstimate__c + SPEN_SPENLegalEstimate__c + SPEN_TCCEstimate__c + SPEN_ResourceEstimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>