force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_TotalLefttoPay__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TotalLefttoPay__c</fullName>
    <formula>SPEN_TotalEstimated__c - SPEN_TotalPaidtoDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Remaining against Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>