force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_TotalPaidtoDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TotalPaidtoDate__c</fullName>
    <formula>SPEN_Stage1Paid__c + SPEN_Stage2Paid__c + SPEN_InterimPaid__c + SPEN_LandownerLegalPaid__c + SPEN_LandownerLegalPaid__c + SPEN_PostConstructionPaid__c + SPEN_ServitudeValuePaid__c + SPEN_SigningIncentivePaid__c + SPEN_SPENLegalPaid__c + SPEN_TCCPaid__c + SPEN_ResourcePaid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Paid to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>