force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_Year1_EstimatedCost__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Year1_EstimatedCost__c</fullName>
    <label>Year 1 Estimate Cost</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>