force-app/main/default/objects/SPEN_Project_Cost_Payment__c/fields/SPEN_Year3__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Year3__c</fullName>
    <label>Year 3</label>
    <length>4</length>
    <type>Text</type>
</CustomField>