force-app/main/default/objects/SPEN_Project_Cost_Payment__c/validationRules/SPEN_Year1FormatRule.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_Year1FormatRule</fullName>
    <active>true</active>
    <errorConditionFormula>(LEN( SPEN_Year1__c )&gt;=1 &amp;&amp; LEN(SPEN_Year1__c)&lt;4) || (NOT(REGEX(SPEN_Year1__c , &quot;[0-9]*&quot;)))</errorConditionFormula>
    <errorDisplayField>SPEN_Year1__c</errorDisplayField>
    <errorMessage>Please fill Year 1 in YYYY format</errorMessage>
</ValidationRule>