force-app/main/default/objects/SPEN_Project_Cost_Payment__c/validationRules/SPEN_Year4FormatRule.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_Year4FormatRule</fullName>
    <active>true</active>
    <errorConditionFormula>(LEN( SPEN_Year4__c )&gt;=1 &amp;&amp; LEN(SPEN_Year4__c)&lt;4) || (NOT(REGEX(SPEN_Year4__c , &quot;[0-9]*&quot;)))</errorConditionFormula>
    <errorDisplayField>SPEN_Year4__c</errorDisplayField>
    <errorMessage>Please fill Year 4 in YYYY format</errorMessage>
</ValidationRule>