force-app/main/default/objects/SPEN_Project_Cost_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_LandInterest__c</columns>
    <columns>SPEN_LandInterestType__c</columns>
    <columns>SPEN_LandOwner__c</columns>
    <columns>SPEN_Apparatus__c</columns>
    <columns>SPEN_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>